EDU-6594: refactor tests to remove the logic, use argument captors instead